external-crates/move/crates/move-compiler/tests/move_check/naming/named_blocks_invalid.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/named_blocks_invalid.move:3:9
  │
3 │         'name: {
  │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

